--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     implementation "androidx.multidex:multidex:2.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
 
     implementation "androidx.room:room-runtime:2.1.0-alpha03"
     annotationProcessor "androidx.room:room-compiler:2.1.0-alpha03"
