--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,14 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.0"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
 
-    implementation "androidx.room:room-runtime:2.1.0-alpha03"
-    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha03"
-    kapt "androidx.room:room-compiler:2.1.0-alpha03"
+    implementation "androidx.room:room-runtime:2.1.0-alpha05"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha05"
+    kapt "androidx.room:room-compiler:2.1.0-alpha05"
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.google.code.gson:gson:2.8.2"
-    implementation "android.arch.work:work-runtime-ktx:1.0.0-beta02"
+    implementation "android.arch.work:work-runtime-ktx:1.0.0"
 
 
     testImplementation 'junit:junit:4.12'
